--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "three": "^0.134.0",
     "vue": "^2.6.14",
-    "vuetify": "^2.5.10"
+    "vuetify": "^2.5.10",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
